# crebito-rs

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  docker-compose.yaml
.sqlx/: query-39e7a3ee9fec38187d0ade86c3e103a3aed1333ea373199df9abab8dd4c6ffac.json  query-73f85101690065ea169fcbe2d9f2fefd6fc74faace766c92e8a5025cdd6c4f20.json
nginx/: Dockerfile  nginx.conf
postgres/: init.sql  postgres.conf
src/: lib.rs  main.rs
src/handler/: healthcheck.rs  mod.rs  summary.rs  transaction.rs
src/infra/: app.rs  error.rs
