[package]
name = "crebito"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
chrono = { version = "0.4.24", features = ["clock", "serde"], default-features=false }
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
uuid = { version = "1.3.4", features = ["v4", "fast-rng", "serde"] }
sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "postgres",
  "chrono",
  "uuid",
] }
